# Segmentation

./: README.md
segmentation/: CMakeLists.txt  package.xml
segmentation/launch/: box_seg.launch  box_seg_3D.launch  cylinder_seg.launch  sphere_seg.launch
segmentation/msg/: box_3D_data.msg  box_data.msg  cylinder_data.msg  processed_box_data.msg  processed_cylinder_data.msg  processed_sphere_data.msg  sphere_data.msg
segmentation/scripts/: box_coeffi.py  box_coeffi_3D.py  cylinder_coeffi.py  sphere_coeffi.py
segmentation/src/: box_extraction_cv_pcl.cpp  box_extraction_cv_pcl_3D.cpp  box_segmentation.cpp  cylinder_extraction_cv_pcl.cpp  cylinder_segmentation.cpp  multi_cylinder_segmentation.cpp  sphere_segmentation.cpp
